# http-tarpit

./: .gitignore  README.md  main.py  pyproject.toml
src/http_tarpit/: config.py  database.py  logger_setup.py  request_handler.py  tarpit.py  tarpit_server.py
src/http_tarpit/reporting/: abuseipdb_reporter.py
src/http_tarpit/utils/: geoip_lookup.py
